--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@capacitor/keyboard": "7.0.2",
     "@capacitor/status-bar": "7.0.2",
     "@ionic/angular": "^8.0.0",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "axios": "^1.11.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
